# poetry_showcase

./: pyproject.toml  requirements.txt
poetry_showcase/: shrek.py
tests/: test_poetry_showcase.py
