[tool.poetry]
name = "poetry_showcase"
version = "0.1.0"
description = ""
authors = ["Valentyn Slivko <metallistvalon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
shrek = "poetry_showcase.shrek:run"
